# anu_ctlab_qemscan_bse_to_zarr3

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/: qemscan_bse_to_zarr3.py
src/anu_ctlab_qemscan_bse_to_zarr3/: __init__.py
src/qemscan_bse_to_zarr3/: __init__.py
