[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qemscan_bse_to_zarr3"
version = "0.1.0"
requires-python = ">=3.12"
description = "Convert QEMSCAN BSE data to Zarr V3"
authors = [
    { name = "Lachlan Deakin", email = "ljdgit@gmail.com" }
]
license = {text = "MIT License"}
dependencies = [
    "numpy",
    "pydantic-xml",
    "imagecodecs",
    "tifffile",
    "typer==0.15.1",
    "zarr==3.0.0rc1",
]

[dependency-groups]
lint = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.6",
]
