[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anu_ctlab_qemscan_bse_to_zarr3"
version = "0.0.1"
requires-python = ">=3.12"
description = "Convert QEMSCAN BSE data to a Zarr V3 image pyramid"
authors = [
    { name = "Lachlan Deakin", email = "ljdgit@gmail.com" }
]
license = {text = "MIT License"}
dependencies = [
    "numpy",
    "pydantic-xml",
    "imagecodecs",
    "tifffile",
    "typer==0.15.1",
    "zarr==3.0.0rc1",
]
keywords = ["zarr", "zarr-v3", "qemscan", "bse"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: File Formats",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Repository = "https://github.com/MaterialsPhysicsANU/anu_ctlab_qemscan_bse_to_zarr3.git"
Changelog = "https://github.com/MaterialsPhysicsANU/anu_ctlab_qemscan_bse_to_zarr3/blob/main/CHANGELOG.md"

[project.scripts]
qemscan_bse_to_zarr3 = "qemscan_bse_to_zarr3:main"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "ruff>=0.8.6",
]
